--- a/UiKitViewHWWeek4/Base.lproj/Main.storyboard
+++ b/UiKitViewHWWeek4/Base.lproj/Main.storyboard
@@ -1,24 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UiKitViewHWWeek4" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QHZ-ms-nuU">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="blah" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="blah" rowHeight="283" id="qJK-L4-5hY" customClass="PetCell" customModule="UiKitViewHWWeek4" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="283"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qJK-L4-5hY" id="9Mg-Qp-f41">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="283"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwo-3S-a9l">
+                                                    <rect key="frame" x="28" y="19" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6X-a1-nMs">
+                                                    <rect key="frame" x="28" y="48" width="42" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx8-bP-Cfp">
+                                                    <rect key="frame" x="28" y="76.5" width="41.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="S6X-a1-nMs" firstAttribute="top" secondItem="Jwo-3S-a9l" secondAttribute="bottom" constant="8" id="4hE-59-W48"/>
+                                                <constraint firstItem="S6X-a1-nMs" firstAttribute="leading" secondItem="9Mg-Qp-f41" secondAttribute="leadingMargin" constant="8" id="7b3-SI-7Es"/>
+                                                <constraint firstItem="Jwo-3S-a9l" firstAttribute="leading" secondItem="9Mg-Qp-f41" secondAttribute="leadingMargin" constant="8" id="FZq-l5-tJy"/>
+                                                <constraint firstItem="Jwo-3S-a9l" firstAttribute="top" secondItem="9Mg-Qp-f41" secondAttribute="topMargin" constant="8" id="Ljh-uB-h7a"/>
+                                                <constraint firstItem="Cx8-bP-Cfp" firstAttribute="top" secondItem="S6X-a1-nMs" secondAttribute="bottom" constant="8" id="T8E-sL-G0T"/>
+                                                <constraint firstItem="S6X-a1-nMs" firstAttribute="top" secondItem="Jwo-3S-a9l" secondAttribute="bottom" constant="8" id="Tsw-Du-T6M"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Cx8-bP-Cfp" secondAttribute="bottom" constant="8" id="amh-Sd-kgx"/>
+                                                <constraint firstItem="Cx8-bP-Cfp" firstAttribute="leading" secondItem="9Mg-Qp-f41" secondAttribute="leadingMargin" constant="8" id="vT9-Ch-aOz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="ageLabel" destination="S6X-a1-nMs" id="7h1-To-CBY"/>
+                                            <outlet property="nameLabel" destination="Jwo-3S-a9l" id="8HH-q6-D0D"/>
+                                            <outlet property="speciesLabel" destination="Cx8-bP-Cfp" id="lFn-ON-7HK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="5Hg-dk-TSd"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="crj-s4-7dd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QHZ-ms-nuU" secondAttribute="trailing" id="1TF-Dy-eZP"/>
+                            <constraint firstItem="QHZ-ms-nuU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NYj-yH-AwH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QHZ-ms-nuU" secondAttribute="bottom" id="bsn-K2-UXN"/>
+                            <constraint firstItem="QHZ-ms-nuU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="iNc-ay-Ptn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="QHZ-ms-nuU" id="jmC-th-TxM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1475.3623188405797" y="-1231.4732142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
